# jelly-actix-web-starter

./: .env.example  .gitignore  .test-env  Cargo.toml  README.md
.github/workflows/: compile.yaml  test.yaml
jelly/: Cargo.toml
jelly/src/: email.rs  error.rs  forms.rs  jobs.rs  lib.rs  oauth.rs  prelude.rs  server.rs  templates.rs  utils.rs
jelly/src/accounts/: password.rs  token_generator.rs
jelly/src/email/: common.rs  mock.rs  mod.rs  postmark.rs  sendgrid.rs  smtp.rs
jelly/src/forms/: booly.rs  date.rs  email.rs  mod.rs  password.rs  slug.rs  text.rs  validators.rs
jelly/src/guards/: auth.rs
jelly/src/oauth/: client.rs  mod.rs
jelly/src/request/: auth.rs  database.rs  flash.rs  jobs.rs  mod.rs  render.rs
jelly/tests/: mail.rs
src/: lib.rs  main.rs  pages.rs  scheduler.rs
src/accounts/: forms.rs  jobs.rs  mod.rs  models.rs
src/accounts/jobs/: odd_registration_attempt.rs  reset_password.rs  verify.rs  welcome.rs
src/accounts/views/: login.rs  mod.rs  register.rs  reset_password.rs  verify.rs
src/dashboard/: mod.rs
src/dashboard/views/: dashboard.rs
src/oauth/: forms.rs  mod.rs  views.rs
src/oauth/views/: authorize.rs  login.rs
templates/: index.html
templates/accounts/: login.html  register.html
templates/accounts/reset_password/: change_password.html  index.html
templates/oauth/: confirm.html  login.html
tests/: templates.rs
