[package]
name = "rust-starterapp"
version = "0.1.1"
authors = ["peter.zingg@gmail.com"]
edition = "2021"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.56"
base64-url = "1.4.8"
jelly = { path = "jelly" }
log = "*"
serde = "1.0"
sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "json"] }
thiserror = "1.0.30"

[features]
# Not using "jelly/static", "jelly/email-postmark", etc.
default = ["jelly/template_watcher", "jelly/email-mock", "jelly/oauth"]
production = ["jelly/production"]

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
test-log = "0.2.8"
