[package]
name = "rust-starterapp"
version = "0.1.1"
authors = ["peter.zingg@gmail.com"]
edition = "2021"

[lib]
name = "mainlib"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.13"
# include direct dependency for macros, e.g. #[actix_web::main]
# version must match jelly
actix-web = { version = "4.0.1", features = ["macros"] }
anyhow = "1.0.56"
base64-url = "1.4.8"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.10"
jelly = { path = "jelly" }
log = "*"
serde = "1.0"
# include direct dependency for sqlx macros
# version must match jelly
sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "json"] }
thiserror = "1.0.30"

[features]
# not using "jelly/static", "jelly/email-postmark", "jelly/email-sendgrid", etc.
default = ["jelly/template_watcher", "jelly/email-mock", "jelly/oauth"]
production = ["jelly/production"]

[dev-dependencies]
dotenv = "0.15.0"
# version must match jelly
env_logger = "0.7.1"
lazy_static = "1.4.0"
test-log = "0.2.8"
